# fragment_modeling

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
src/fragment_modeling/: fragment_transform.py  model_load_predict.py  prepare_transfer.py  transfer.py
tests/: test_build_model.py  test_fragment_transform.py  test_prepare_transfer.py  test_transfer.py
