[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atom_ordering"
version = "0.1.0"
description = "Canonical molecular fragment geometry and force transformation for ML preprocessing"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "tensorflow",
    "scikit-learn",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["atom_ordering*"]
